--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -4,3 +4,6 @@ spring:
     path: '/console'
   datasource:
     url: 'jdbc:h2:file:C:/NAUKA/kurs-spring/todb'
+  jpa:
+    hibernate:
+      ddl-auto: validate
