--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.profiles.active=local
 spring.main.banner-mode=off
 task.template.allowMultipleTasks=false
+spring.flyway.baseline-on-migrate = true
 
